commments for @adamwathan on integration guide files + commenting out the svelte guide

--- a/src/pages/docs/guides/angular.mdx
+++ b/src/pages/docs/guides/angular.mdx
@@ -3,6 +3,12 @@ title: "Install Tailwind CSS with Angular"
 description: "Setting up Tailwind CSS in an Angular project."
 ---
 
+<!--
+#####
+Launch day test: Angular works with the normal tailwindcss package 🎉
+#####
+-->
+
 ## Creating your project
 
 Start by creating a new Angular project if you don't have one set up already. The most common approach is to use the [Angular CLI](https://angular.io/guide/setup-local#install-the-angular-cli):
