--- a/src/pages/docs/guides/create-react-app.mdx
+++ b/src/pages/docs/guides/create-react-app.mdx
@@ -3,6 +3,13 @@ title: "Install Tailwind CSS with Create React App"
 description: "Setting up Tailwind CSS in a Create React App project."
 ---
 
+<!-- 
+#####
+Launch day test: getting errors with the `require('tailwindcss/postcss7')` in craco config.
+Changing that to `require('tailwindcss') fixes it.
+#####
+-->
+
 ## Creating your project
 
 Start by creating a new Create React App project if you don't have one set up already:
