--- a/src/pages/docs/guides/vue-3-vite.mdx
+++ b/src/pages/docs/guides/vue-3-vite.mdx
@@ -3,6 +3,11 @@ title: "Install Tailwind CSS with Vue 3 and Vite"
 description: "Setting up Tailwind CSS in a Vue 3 and Vite project."
 ---
 
+<!-- 
+#####
+launch day test: needs @tailwindcss@compat to work! 
+#####
+-->
 
 ## Creating your project
 
