--- a/src/pages/docs/guides/rails.mdx
+++ b/src/pages/docs/guides/rails.mdx
@@ -3,6 +3,12 @@ title: "Install Tailwind CSS with Rails"
 description: "Setting up Tailwind CSS in a Rails project."
 ---
 
+<!--
+#####
+Launch day test: it works with the normal tailwindcss package 🎉
+#####
+-->
+
 # Using Tailwind CSS with Rails
 
 ## Creating your project
@@ -61,7 +67,7 @@ Next, let's import this file in our application JavaScript pack (`app/javascript
   require("turbolinks").start();
   require("@rails/activestorage").start();
   require("channels");
-+ require("../styles/tailwind");
++ require("../styles/tailwind.css");
 
 ```
 
