softer, lighter word-break and text-overflow examples

--- a/src/pages/docs/text-overflow.mdx
+++ b/src/pages/docs/text-overflow.mdx
@@ -15,7 +15,7 @@ Use `truncate` to truncate overflowing text with an ellipsis (<code>…</code>) 
 
 ```html indigo
 <template preview>
-  <p class="max-w-xs p-4 mx-auto truncate bg-indigo-200 rounded-md shadow-inner">
+  <p class="truncate max-w-xs px-6 py-4 mx-auto bg-indigo-200 text-indigo-500 font-medium rounded-lg">
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiisitaquequodpraesentiumexplicaboincidunt? Dolores beatae nam at sed dolorum ratione dolorem nisi velit cum.
   </p>
 </template>
@@ -29,7 +29,7 @@ Use `overflow-ellipsis` to truncate overflowing text with an ellipsis (<code>…
 
 ```html emerald
 <template preview>
-  <p class="max-w-xs p-4 mx-auto overflow-ellipsis overflow-hidden bg-emerald-200 rounded-md shadow-inner">
+  <p class="overflow-ellipsis overflow-hidden max-w-xs px-6 py-4 mx-auto bg-emerald-200 text-emerald-500 font-medium rounded-lg">
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiisitaquequodpraesentiumexplicaboincidunt? Dolores beatae nam at sed dolorum ratione dolorem nisi velit cum.
   </p>
 </template>
@@ -43,7 +43,7 @@ Use `overflow-clip` to truncate the text at the limit of the content area.
 
 ```html lightBlue
 <template preview>
-  <p class="max-w-xs p-4 mx-auto overflow-clip overflow-hidden bg-light-blue-200 rounded-md shadow-inner">
+  <p class="overflow-clip overflow-hidden max-w-xs px-6 py-4 mx-auto bg-light-blue-200 text-light-blue-500 font-medium rounded-lg">
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiisitaquequodpraesentiumexplicaboincidunt? Dolores beatae nam at sed dolorum ratione dolorem nisi velit cum.
   </p>
 </template>
