--- a/src/pages/docs/word-break.mdx
+++ b/src/pages/docs/word-break.mdx
@@ -15,7 +15,7 @@ Use `break-normal` to only add line breaks at normal word break points.
 
 ```html lightBlue
 <template preview>
-  <p class="break-normal max-w-xs p-4 mx-auto bg-light-blue-200 rounded-md shadow-inner">
+  <p class="break-normal max-w-xs px-6 py-4 mx-auto bg-light-blue-200 text-light-blue-500 font-medium rounded-lg">
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiisitaquequodpraesentiumexplicaboincidunt? Dolores beatae nam at sed dolorum ratione dolorem nisi velit cum.
   </p>
 </template>
@@ -29,7 +29,7 @@ Use `break-words` to add line breaks mid-word if needed.
 
 ```html amber
 <template preview>
-  <p class="break-words max-w-xs p-4 mx-auto bg-amber-200 rounded-md shadow-inner">
+  <p class="break-words max-w-xs px-6 py-4 mx-auto bg-amber-200 text-amber-500 font-medium rounded-lg">
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiisitaquequodpraesentiumexplicaboincidunt? Dolores beatae nam at sed dolorum ratione dolorem nisi velit cum.
   </p>
 </template>
@@ -43,7 +43,7 @@ Use `break-all` to add line breaks whenever necessary, without trying to preserv
 
 ```html emerald
 <template preview>
-  <p class="break-all max-w-xs p-4 mx-auto bg-emerald-200 rounded-md shadow-inner">
+  <p class="break-all max-w-xs px-6 py-4 mx-auto bg-emerald-200 text-emerald-500 font-medium rounded-lg">
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiisitaquequodpraesentiumexplicaboincidunt? Dolores beatae nam at sed dolorum ratione dolorem nisi velit cum.
   </p>
 </template>
