example tweak improvements

--- a/src/pages/docs/container.mdx
+++ b/src/pages/docs/container.mdx
@@ -61,7 +61,7 @@ Note that unlike containers you might have used in other frameworks, **Tailwind'
 To center a container, use the `mx-auto` utility:
 
 ```html
-<div class="container mx-auto">
+<div class="container **mx-auto**">
   <!-- ... -->
 </div>
 ```
@@ -69,7 +69,7 @@ To center a container, use the `mx-auto` utility:
 To add horizontal padding, use the `px-{size}` utilities:
 
 ```html
-<div class="container mx-auto px-4">
+<div class="container mx-auto **px-4**">
   <!-- ... -->
 </div>
 ```
@@ -82,7 +82,7 @@ The `container` class also includes responsive variants like `md:container` by d
 
 ```html
 <!-- Full-width fluid until the `lg` breakpoint, then lock to container -->
-<div class="lg:container lg:mx-auto">
+<div class="**md:container md:mx-auto**">
   <!-- ... -->
 </div>
 ```
